Add create user REST Api
